# ai-bidding

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  Makefile  README.md  README_OPTIMIZATIONS.md  config.toml  create_test_docx.py  demo_enhanced_workflow.py  demo_template_styles.py  deploy.sh  docker-compose.dev.yml  docker-compose.enhanced.yml  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  redis.conf  run.py  start_enhanced.sh  test_bidding_document.docx  test_bidding_document.txt  test_content_quality_optimizations.py  test_document_path_fix.py  test_final_integration.py  test_final_verification.py  test_frontend_backend_integration.py  test_full_workflow.py  test_local_workflow.py  test_new_workflow.py  test_numbered_format_final.py  test_numbered_outline_parsing.py  test_numbered_outline_workflow.py  test_optimizations.py  test_project_creation_restored.py  test_prompt_optimizations.py  test_quick_optimizations.py  test_simplified_ui.py  (+1 more)
.github/workflows/: ci.yml
backend/: main.py
backend/api/routes/: config.py  documents.py  formatting.py  generation.py  projects.py  tasks.py
backend/core/: __init__.py  database.py  toml_config.py
backend/models/: __init__.py  document.py  generation.py  project.py  task.py
backend/schemas/: __init__.py  generation.py  project.py
backend/services/: __init__.py  config_manager.py  content_generator.py  document_formatter.py  document_parser.py  enhanced_document_parser.py  enhanced_output_parser.py  enhanced_workflow_engine.py  llm_manager.py  llm_service.py  output_parser.py  persistence_service.py  validation_service.py  workflow_engine.py
backend/tasks/: __init__.py  celery_app.py  workflow_tasks.py
config/: dynamic_config.json  dynamic_config.toml
docs/: API接口文档.md  README.md  content_quality_optimization_report.md  final_implementation_summary.md  new_workflow_design.md  optimization_implementation.md  optimization_summary.md  user_guide.md  workflow.docx  workflow.md  业务分析报告.md  增强版使用指南.md  技术方案.md  技术架构详解.md  投标书质量优化报告.md  投标文件template.dotm  招投标工作流程分析与优化方案.md  最终优化建议与实施方案.md  生成投标书与目标投标书对比分析.md  部署运维指南.md  需求.md  需求规格说明书v2.0.md  项目优化完成总结.md  项目总结报告.md
frontend/: app.py
monitoring/: prometheus.yml
outputs/: AI生成项目_20250704_024023.docx  demo_template_styles.docx  test_template_output.docx  快速测试格式化文档_格式化_20250706_220321.docx  快速测试章节格式化_格式化_20250706_220321.docx  最终测试项目_20250704_005616.docx  测试 R1-003_20250704_083444.docx  测试20250706002_20250706_224859.docx  测试20250706005_20250707_000600.docx  测试20250707001_20250707_001225.docx  测试20250707002_20250707_002203.docx  测试20250707003_20250707_002601.docx  测试V0.2_20250704_025134.docx
tests/: test_document_parser.py  test_dotm.py  test_end_to_end.py  test_enhanced_workflow.py
uploads/: test_bidding_document.txt  test_tender_document.docx
