[project]
name = "ai-bidding"
version = "0.1.0"
description = "基于AI的投标方案辅助生成系统"
requires-python = ">=3.11"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.0.12",
    "datasets>=3.6.0",
    "fastapi>=0.115.9",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-deepseek>=0.1.3",
    "langchain-huggingface>=0.3.0",
    "langgraph>=0.4.8",
    "numpy>=2.3.0",
    "pillow>=11.2.1",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.9.1",
    "pypdf>=5.6.0",
    "python-docx>=1.1.2",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.7.0",
    "sentence-transformers>=4.1.0",
    "toml>=0.10.2",
    "tqdm>=4.67.1",
    "unstructured[all-docs]>=0.18.1",
    "uvicorn>=0.34.3",
    "gradio>=4.0.0",
    "celery[redis]>=5.3.0",
    "redis>=5.0.0",
    "loguru>=0.7.0",
    "aiofiles>=23.2.0",
    "httpx>=0.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.2",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.9.1",
    "isort>=5.12.0",
    "mypy>=1.5.1",
    "ruff>=0.1.0",
]

[tool.setuptools.packages.find]
include = ["backend*", "frontend*"]
